--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <!-- 功能区 -->
     <string name="func_tts">文字转语音</string>
     <string name="func_draw">函数图像绘制</string>
-    <string name="func_heading_poem">藏头诗生成</string>>
+    <string name="func_heading_poem">藏头诗生成</string>
+    <string name="no_permission">权限未通过</string>>
 </resources>
