--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,31 +1,26 @@
 <resources>
     <string name="app_name">H Tools</string>
     <string name="start">开始</string>
+    <string name="activity_settings">设置</string>
+    <string name="input_url">输入链接</string>
 
     <!-- 功能区 -->
     <string name="func_tts">文字转语音</string>
-    <string name="func_draw">函数图像绘制</string>
+    <string name="func_draw_function">函数图像绘制</string>
     <string name="func_heading_poem">藏头诗生成</string>
+    <string name="func_web">网页工具</string>
+    <string name="func_music">音乐下载</string>
+
+
     <string name="no_permission">权限未通过</string>
     <string name="title_activity_settings">SettingsActivity</string>
 
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
-
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
-
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="pref_default_path_summary">很长，但是无需手动选择路径</string>
     <string name="pref_default_path">保存至默认路径</string>
-    <string name="activity_settings">设置</string>
-    <string name="func_web">网页工具</string>
-    >
+    <string name="ok">确定</string>
+
+    <string name="help">帮助</string>
+    <string name="help_music">使用步骤:\n1. 在网易云音乐App找到音乐\n2. 点击\"分享\", 然后\"复制链接\"\n3. 将链接粘贴到此处\n4. 点击\"开始\"</string>
+    <string name="err_file_select_blocked">文件路径选择中断</string>
+    <string name="err_file_null">文件获取失败</string>
 </resources>
